# COR

./: CMakeLists.txt  README.md
ql/: README.md  func_ptr.ql
query/: README.md  result1.md  result2.md
samples/: pointer.cpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  MakeFunction.cmake
src/lib/COR/: CMakeLists.txt  FindFunctionPointer.cpp
src/lib/COR/include/: FindFunctionPointer.h
